dark mode color change bug fix

--- a/src/components/MicroBlogs/microBlogs.css
+++ b/src/components/MicroBlogs/microBlogs.css
@@ -75,12 +75,13 @@
 
 .blogDetails {
     height: 100vh;
-    padding:8px 16px;
-    background-color: var(--bg-one);
+    padding:8px 10px;
+    background-color: var(--bg-two);
     color: var(--color);
 }
 
 .blogDetailsLayout {
+    background-color: var(--bg-one);
     max-width: 790px;
     position: relative;
     min-height: 300px; 
