--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,10 @@
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     -webkit-tap-highlight-color: transparent; /* Safari/Chrome */
     tap-highlight-color: transparent; /* Firefox */
+    -webkit-user-select: none; /* disables text selection*/
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
 
 :root {
