--- a/src/shop/components/Cart/cart.css
+++ b/src/shop/components/Cart/cart.css
@@ -1,7 +1,8 @@
 .cart {
-    min-height: 100%;
+    min-height: 100vh;
     width: 100%;
     padding: 20px;
+    background-color: var(--bg-two);
 }
 
 .cartItemContainer {
@@ -22,8 +23,10 @@
 }
 
 .cartItemContainer .cartItem {
-    margin: 0 10px;
+    margin: 0px;
     border-bottom: 1px solid gray;
+    display: grid;
+    grid-template-columns: 70% 30%;
 }
 
 .cartItemContainer .cartItem > div:first-child {
